# userspace-resource-manager

./: .gitignore  AppConfigs_8h_source.html  AuxRoutines_8h_source.html  CMakeLists.txt  ClientDataManager_8h_source.html  ClientGarbageCollector_8h.html  ClientGarbageCollector_8h_source.html  CocoTable_8h.html  CocoTable_8h_source.html  Common_8h_source.html  ComponentRegistry_8h_source.html  CoreAPIsExamples_8c-example.html  CoreAPIsExamples_8c_source.html  CoreAPIsExamples_8cpp-example.html  CoreAPIsExamples_8cpp_source.html  ErrCodes_8h.html  ErrCodes_8h_source.html  ExtFeaturesRegistry_8h_source.html  Ext_Feature_Configs-example.html  Init_Configs-example.html  Message_8h_source.html  Plugin_8cpp-example.html  Plugin_8cpp_source.html  PropertiesRegistry_8h_source.html  Properties_Configs-example.html  PulseMonitor_8h.html  PulseMonitor_8h_source.html  README.md  RateLimiter_8h.html  RateLimiter_8h_source.html  Relay_8cpp-example.html  Relay_8cpp_source.html  RequestManager_8h_source.html  RequestQueue_8h_source.html  RequestReceiver_8h_source.html  Request_8h_source.html  ResourceRegistry_8h_source.html  Resource_8h_source.html  Resource_Configs-example.html  RestuneInternal_8h.html  (+162 more)
.github/workflows/: codeql.yml  doc_generator.yml  pkg-build-pr-check.yml  pr.yml  qcom-preflight-checks.yml  run_armor.yml
ci/: build.sh
client/: CMakeLists.txt  ClientCLI.cpp
client/APIs/: UrmAPIs.cpp
client/APIs/Include/: UrmAPIs.h
configs/: InitConfig.yaml  PropertiesConfig.yaml  ResourcesConfig.yaml
contextual-classifier/: CMakeLists.txt  ContextualClassifier.cpp  ContextualClassifierInit.cpp  MLInference.cpp  NetLinkComm.cpp
contextual-classifier/Configs/: allow-list.txt  classifier-blocklist.txt
contextual-classifier/Include/: ContextualClassifier.h  MLInference.h
debian/: userspace-resource-manager.install
docs/: README.md
docs/UserGuide/: EXTENSIONS-USAGE.md
extensions/: CMakeLists.txt
extensions/Include/: Extensions.h
modula/: CMakeLists.txt
modula/Common/: Message.cpp  Signal.cpp
modula/Common/Include/: Common.h  ErrCodes.h  Signal.h  UrmPlatformAL.h  Utils.h
modula/Components/: Logger.cpp  ThreadPool.cpp
modula/Components/Include/: Logger.h  ThreadPool.h
modula/CoreModules/: AuxRoutines.cpp  UrmSettings.cpp
modula/CoreModules/Include/: AuxRoutines.h  ComponentRegistry.h  Config.h.in  UrmSettings.h
public_headers/: config.yml
resource-tuner/: CMakeLists.txt  libRestuneCore.map
resource-tuner/core/: ClientDataManager.cpp  ClientGarbageCollector.cpp  CocoTable.cpp  PropertiesRegistry.cpp  PulseMonitor.cpp  RateLimiter.cpp  RequestHandler.cpp  RequestManager.cpp  ResourceHooks.cpp  ResourceRegistry.cpp  TargetRegistry.cpp
resource-tuner/core/Include/: ClientDataManager.h  ClientGarbageCollector.h  CocoTable.h  PropertiesRegistry.h  PulseMonitor.h  RateLimiter.h  RequestQueue.h  ResourceRegistry.h  RestuneInternal.h  RestuneVisibility.h  TargetRegistry.h
resource-tuner/core/Server/: RequestReceiver.cpp
resource-tuner/core/Server/Include/: RequestReceiver.h
resource-tuner/dbus-modules/: RestuneDBusInternal.cpp  RestuneDBusStubs.cpp  StateDetector.cpp
resource-tuner/dbus-modules/Include/: RestuneDBus.h
resource-tuner/init/: RestuneInit.cpp  RestuneParser.cpp
resource-tuner/init/Include/: RestuneParser.h
resource-tuner/signals/: ExtFeatureMapper.cpp  ExtFeaturesRegistry.cpp  SignalHandler.cpp  SignalRegistry.cpp
resource-tuner/signals/Include/: AppConfigs.h  ExtFeaturesRegistry.h  SignalExtFeatureMapper.h  SignalInternal.h  SignalRegistry.h
resource-tuner/tests/Component/: ParserTests.cpp
resource-tuner/tests/Integration/: IntegrationTests.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  enums_2.js  functions_0.js  functions_2.js  functions_3.js  functions_7.js  functions_9.js  pages_1.js  pages_3.js  pages_4.js  (+2 more)
tests/: CMakeLists.txt  README.md
tests/Component/: ClientDataManagerTests.cpp  CocoTableTests.cpp  ConfigSelectionTests.cpp  ContextClassificationTest.cpp  DeviceInfoTests.cpp  ExtensionIntfTests.cpp  MemoryPoolTests.cpp  MiscTests.cpp  ParserTests.cpp  RateLimiterTests.cpp  RequestMapTests.cpp  RequestQueueTests.cpp  SafeOpsTests.cpp  ThreadPoolTests.cpp  TimerTests.cpp  Trigger.cpp  tests_main.cpp
tests/Configs/: Baseline.yaml  ExtFeaturesConfig.yaml  InitConfig.yaml  PerApp.yaml  SignalsConfig.yaml  SignalsConfigAddOn.yaml
tests/Integration/: CCIntegrationTest.cpp  IntegrationTests.cpp
tests/Utils/: URMTests.cpp
tests/Utils/Include/: TestUtils.h  URMTests.h
tests/contextual-classifier/: CMakeLists.txt
tests/contextual-classifier/Integration/: IntegrationTests.cpp
tests/contextual-classifier/include/: test_helpers.hpp
tests/framework/: mini.hpp
tests/resource-tuner/: CMakeLists.txt
tests/resource-tuner/Component/: ClientDataManagerTests.cpp  CocoTableTests.cpp  DeviceInfoTests.cpp  ExtensionIntfTests.cpp  MemoryPoolTests.cpp  MiscTests.cpp  ParserTests.cpp  RateLimiterTests.cpp  RequestMapTests.cpp  RequestQueueTests.cpp  SafeOpsTests.cpp  ThreadPoolTests.cpp  TimerTests.cpp
tests/resource-tuner/Configs/: PerApp.yaml
tests/resource-tuner/Integration/: IntegrationTests.cpp  StateDetectionTests.cpp
tests/resource-tuner/Unit/: test_getResConf.cpp  test_submitResProvisionRequest.cpp
tests/resource-tuner/Unit/shims/: SubmitShim.cpp
tests/resource-tuner/Utils/: Setup.cpp
tests/resource-tuner/Utils/Include/: JoiningThread.h  TestInitReset.h
